<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">
    android:background="#000"


<!--    <ListView-->
<!--        android:id="@+id/listViewSong"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:divider="@color/cardview_light_background"-->
<!--        android:dividerHeight="10.0sp"-->
<!--        android:padding="8dp">-->

<!--    </ListView>-->

    <Button
        android:id="@+id/btngotofind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Artist/Band Info" />

    <Button
        android:id="@+id/btnfindalbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:text="ALBUM INFO" />

    <Button
        android:id="@+id/openYoutubeFormbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btngotofind"

        android:text="Play Youtube Videos" />

    <Button
        android:id="@+id/logoutbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/openYoutubeFormbtn"
        android:text="Log Out" />

</RelativeLayout>